<resources>
  <string name="app_name">Homestead</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <!-- TODO change to adapt to users info -->
  <string name="nav_header_title">Homestead</string>
  <string name="nav_header_desc">Navigation header</string>

  <string name="search_hint">Search<content>Homestead</content></string>

  <string name="menu_events">Events</string>
  <string name="menu_agencies">Agencies</string>
  <string name="menu_resources">Resources</string>
  <string name="menu_weather">Weather</string>
  <string name="menu_settings">Settings</string>
  <string name="title_events">Homestead Events</string>
  <string name="title_agencies">Homestead Agencies</string>
  <string name="title_resources">Homestead Resources</string>
  <string name="title_weather">Homestead Weather</string>
  <string name="title_settings">Homestead Settings</string>

  <string name="favorites">Favorites</string>
  <string name="add_favr">Added to Favorites</string>
  <string name="remove_favr">Removed from Favorites</string>
  <string name="no_favorites_items">No Favorites</string>
  <string name="no_favorites_msg">Long press on item to add to favorites.</string>
  <string name="favorites_remove_msg">Long press on item to remove from favorites.</string>

  <string name="login_failure">Unable to login with provided credentials.</string>
  <string name="sign_out">Sign out</string>
  <string name="skip_text">Skip</string>
  <string name="title_activity_settings">Settings</string>

  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="menu_favorites">Agency Favorites</string>
  <string name="title_favorites">Homestead Favorites</string>
  <string name="title_agency_search">Homestead Search</string>
  <string name="menu_agency_search">Agency Search</string>
</resources>
