<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group
    android:id="@+id/menu_top"
    android:checkableBehavior="single">

    <item
      android:id="@+id/nav_favorites"
      android:icon="@drawable/ic_heart_red"
      android:title="@string/menu_favorites"/>

    <item
      android:id="@+id/nav_events"
      android:icon="@drawable/ic_event"
      android:title="@string/menu_events"/>
    <item
      android:id="@+id/nav_agencies"
      android:icon="@drawable/ic_people"
      android:title="@string/menu_agencies"/>
    <item
      android:id="@+id/nav_resources"
      android:icon="@drawable/ic_business"
      android:title="@string/menu_resources"/>
    <item
      android:id="@+id/nav_weather"
      android:icon="@drawable/ic_cloud"
      android:title="@string/menu_weather"/>

  </group>

  <group
    android:id="@+id/menu_bottom"
    android:checkableBehavior="none">

    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_settings"
      android:title="@string/menu_settings"/>

  </group>

</menu>
