<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_events">

  <fragment
    android:id="@+id/nav_events"
    android:label="@string/title_events"
    android:name="edu.cnm.deepdive.homestead.ui.home.HomeFragment"
    tools:layout="@layout/fragment_home"/>

  <fragment
    android:id="@+id/nav_agencies"
    android:label="@string/title_agencies"
    android:name="edu.cnm.deepdive.homestead.ui.gallery.GalleryFragment"
    tools:layout="@layout/fragment_gallery"/>

  <fragment
    android:id="@+id/nav_resources"
    android:label="@string/title_resources"
    android:name="edu.cnm.deepdive.homestead.ui.slideshow.SlideshowFragment"
    tools:layout="@layout/fragment_slideshow"/>

  <fragment
    android:id="@+id/nav_weather"
    android:label="@string/title_weather"
    android:name="edu.cnm.deepdive.homestead.ui.tools.ToolsFragment"
    tools:layout="@layout/fragment_tools"/>

  <fragment
    android:id="@+id/nav_settings"
    android:label="@string/title_settings"
    android:name="edu.cnm.deepdive.homestead.ui.share.ShareFragment"
    tools:layout="@layout/fragment_share"/>

</navigation>